--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
             </p>
         <input type="radio" id="My own" name="user" value="b">
         <label for="My own">Mine</label><br>
-        <h2 style="text-indent: 40px">Input your domains, each separated by a space (at least two domains). <input name="email"/></h2>
+        <h2 style="text-indent: 40px">Input your domains, each separated by a space (at least two domains). <input name="domains"/></h2>
         <button type="submit">Submit</button>
     </form> 
 </html>
